# rorica

./: .dockerignore  .env.sh.sample  LICENSE  README.md  docker-compose.yml
caddy/: Dockerfile  common.caddy  develop.caddyfile  development.caddyfile  production.caddyfile
client/: Dockerfile  bun.lockb  index.html  package.json
client/src/: App.css  App.tsx  ThemeSwitcher.tsx  index.css
server/: Dockerfile  pyproject.toml
server/src/rorica_server/: __init__.py  const.py
