[project]
name = "rorica-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "myxi", email = "myxi@envs.net" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "kisesi>=0.3.1",
    "websockets>=14.1",
]

[project.scripts]
rorica-server = "rorica_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
